--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -1,12 +1,19 @@
 <resources>
-	<string name="app_name">泰心康护</string>
+    <string name="app_name">泰心康护</string>
 
-	<string name="welcome_activity_name">泰心康护</string>
-	<string name="title_activity_main">MainActivity</string>
+    <string name="welcome_activity_name">泰心康护</string>
 
-	<string name="hello_world">Hello world!</string>
-	<string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_main">MainActivity</string>
 
-
-
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_find_hugong">find_hugong</string>
+    <string name="title_activity_dingdan">dingdan</string>
+    <string name="title_activity_faxian">faxian</string>
+    <string name="title_activity_kefu">kefu</string>
+    <string name="title_activity_gg_01">GG_01</string>
+    <string name="title_activity_gg_02">GG_02</string>
+    <string name="title_activity_recommend_hugong">recommend_hugong</string>
 </resources>
