[modify]泰心医护修改

--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_gg_01">GG_01</string>
     <string name="title_activity_gg_02">GG_02</string>
     <string name="title_activity_recommend_hugong">recommend_hugong</string>
+    <string name="title_activity_test111111111111111111111">test111111111111111111111</string>
 </resources>
