[modify]添加陪护相关的汉字信息。

--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -45,6 +45,27 @@
 
     <string name="function_is_not_open">功能未开放</string>
 
+    <string name="nurse_junior">初级护理员</string>
+	<string name="intermediates_junior">中级护理员</string>
+	<string name="senior_junior">高级护理员</string>
+	<string name="super_junior">特级护理员</string>
+
+	<string name="no_nursing_exp">无护理经验</string>
+	<string name="year_nursing_exp">年护理经验</string>
+
+	<string name="nurse_status_free">空闲</string>
+	<string name="nurse_status_services">服务中</string>
+
+	<string name="language_level_general">一般</string>
+	<string name="language_level_good">良好</string>
+	<string name="language_level_skilled">熟练</string>
+
+	<string name="language_type_cn">汉语</string>
+	<string name="language_type_en">熟练</string>
+
+	<string name="junior_high_school_level_and_below">初中及以下水平</string>
+	<string name="senior_middle_schoole">高中</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
