--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -74,6 +74,8 @@
 	<string name="nurse_certificate">持有证书:</string>
 	<string name="nurse_service_content">服务内容:</string>
 
+    <string name="error_disconnect">请保持网络通畅或在WIFI下使用。</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_find_hugong">find_hugong</string>
