[modify]调整购物页面布局

--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -115,7 +115,10 @@
 	<string name="item_name_title">思维 束腰带 X-002 透气护 腰肌劳损腰间盘突出辅助康复内赠磁垫</string>
 	<string name="currency_symbol">￥</string>
 	<string name="item_price">39.00</string>
-	<string name="item_evaluation">好评91%</string>
-	<string name="item_evaluation_times">11人</string>
+	<string name="item_evaluation_prefix">好评</string>
+	<string name="item_evaluation">91</string>
+	<string name="item_evaluation_suffix">%</string>
+	<string name="item_evaluation_times">11</string>
+	<string name="item_evaluation_times_suffix">人</string>
 
 </resources>
