--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -7,10 +7,11 @@
 	<string name="action_settings">Settings</string>
 	<string name="title_activity_main">MainActivity</string>
 
-	<string name="main_tab_name">首页</string>
-	<string name="mine_tab_name">我的</string>
-	<string name="service_tab_name">服务</string>
-	<string name="company_tab_name">泰心</string>
+	<string name="main_home_tab_text">首页</string>
+	<string name="main_personal_tab_text">我的</string>
+	<string name="main_service_tab_text">服务</string>
+	<string name="main_compant_tab_text">泰心</string>
+
 	<string name="main_func_text">泰心康护是衣架专注于康复护理产业资源整合的服务性公司。泰心昂胡在大健康产品迅猛发展，医改大变革的背景下，对专家团队，培训机构，研发企业，生产企业，销售队伍，护理团队...</string>
 	<string name="main_persional_popmenu_nursing_order_name">陪护订单</string>
 	<string name="main_persional_popmenu_shopping_order_name">产品订单</string>
@@ -18,10 +19,10 @@
 	<string name="main_persional_popmenu_setting_name">我的设置</string>
 
 	//页面title
-	<string name="owner_choose_nurse">我自己选护理员</string>
+	<string name="owner_choose_nurse">预约陪护</string>
 	<string name="about_us_title">泰心康护</string>
 	<string name="service_title">泰心服务</string>
-	<string name="faq_title">问题反馈</string>
+	<string name="faq_title">常见问题</string>
 	<string name="agreement_title">用户协议</string>
 	<string name="worker_level_title">护理员级别</string>
 	<string name="my_wealth_title">我的财富</string>
@@ -34,6 +35,9 @@
 	<string name="nurs_order_reviews_title">评价</string>
 	<string name="shopping_title">康复辅助用品</string>
 	<string name="goods_info_title">商品详细信息</string>
+
+	//预约陪护
+	<string name="protocol_text">点击注册表示已阅读并同意</string>
 
 	<string name="function_is_not_open">功能未开放</string>
 	<string name="nurse_junior">初级护理员</string>
