--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -43,6 +43,14 @@
 	//注册信息
 	<string name="title_register">注册页面</string>
 
+	<!-- 选择陪护时间-->
+	<string name="title_select_date">选择陪护时间</string>
+	<string name="char_total">共</string>
+	<string name="char_day">天</string>
+
+	<!-- 公共信息-->
+	<string name="content_sure">确认</string>
+
 	//我的设置
 	<string name="title_setting">我的设置</string>
 	<string name="tips_logout">您还未登录哦~</string>
@@ -231,7 +239,6 @@
 	<string name="title_activity_shopping">ShoppingActivity</string>
 	<string name="title_activity_goods_info">GoodsInfoActivity</string>
 	<string name="title_appoitment_nursing">ApoitNursingActivity</string>
-	<string name="title_select_date">SelectDateActivity</string>
 	<string name="title_nurs_order_pay">NursOrderPayActivity</string>
 
 	<string name="sunday">日</string>
