--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -41,7 +41,13 @@
 	<string name="shopping_car_title">购物车</string>
 	<string name="shopping_order_confirm_title">确认订单</string>
 
-	//预约陪护
+	<!-- 基本内容信息-->
+	<string name="content_male">男</string>
+	<string name="content_female">女</string>
+	<string name="content_care_myself">可自理</string>
+	<string name="content_half_care_myself">半自理</string>
+	<string name="content_not_care_myself">不能自理</string>
+
 	//注册信息
 	<string name="title_register">注册页面</string>
 
@@ -65,10 +71,15 @@
 	<string name="info_register_success">成功</string>
 	<string name="info_determine">确定</string>
 	<string name="info_cancel">取消</string>
+
+
 	<!-- 错误信息-->
 	<string name="err_info_invalid_phone">请输入有效的手机号码</string>
 	<string name="err_info_no_init_sms">SmsAutho未初始化</string>
 	<string name="err_info_invalid_country_zip_code">当前国家不支持手机验证服务</string>
+	<string name="err_info_fill_required_options">请填写必填选项</string>
+
+
 	<!-- net 错误信息-->
 	<string name="err_info_deserialization_failed">反序列化失败</string>
 	<string name="err_info_http_status">http status:</string>
