--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -98,7 +98,7 @@
 	<string name="four_star_worker_explain">由具有6个月以上护理员工作经验，通过专业考核并取得中级护理员证书且好评率在95%以上的中级护理员提供的陪护服务。\n服务内容\n包括初级护理的所有服务内容；\n帮助患者翻身、扣背，防止患者身体长褥疮；\n观察患者病情变化（观察监护仪变化）；\n记录患者的出入量（入食和排便）；\n保持各种医疗管路畅通；\n在医护人员的指导下熟练掌握各种医疗辅具；</string>
 	<string name="five_star_worker_explain">由具有4年以上护理员工作经验，年龄在30~50岁之间，中学以上文化程度，通过专业考核并取得高级护理员证书，沟通能力良好且好评率在98%以上的高级护理员提供的陪护服务。\n服务内容\n包括中级护理的所有服务内容；\n懂得ICU及危重、特殊病人的看护；\n协助患者进行简单康复锻炼；\n陪同患者读书、聊天或进行一些娱乐活动；</string>
 	<string name="six_star_worker_explain">由具有6年以上护理员工作经验，年龄在30~50岁之间，中学以上文化程度，通过专业考核并取得特级护理员证书，沟通能力强且好评率100%的特级护理员提供的陪护服务。\n服务内容\n包括高级护理的所有服务内容；\n安抚病人情绪、为病人做心理辅导；</string>
-	<string name="apponintment_page_hint_text">请填写以下信息，我们将根据您的实际情况为您匹配相应的护理员</string>
+	<string name="apponintment_page_hint_text">请填写以下信息\n我们将根据您的实际情况为您匹配相应的护理员</string>
 	<string name="protocol_confirm_text">点击确认表示已阅读并同意</string>
 	<string name="confirm_btn_text">确认</string>
 	<string name="name_text">姓名：</string>
