--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
 	<string name="err_info_no_init_sms">SmsAutho未初始化</string>
 	<string name="err_info_invalid_country_zip_code">当前国家不支持手机验证服务</string>
 	<string name="err_info_fill_required_options">请填写必填选项</string>
-
+	<string name="err_info_json_serilization">json序列化错误</string>
 
 	<!-- net 错误信息-->
 	<string name="err_info_deserialization_failed">反序列化失败</string>
