--- a/taixinkanghu/src/main/res/values/strings.xml
+++ b/taixinkanghu/src/main/res/values/strings.xml
@@ -50,6 +50,10 @@
 	<string name="content_care_myself">可自理</string>
 	<string name="content_half_care_myself">半自理</string>
 	<string name="content_not_care_myself">不能自理</string>
+	<string name="content_main_page">首页</string>
+	<string name="content_yuan_per_day">元/天</string>
+	<string name="content_self_intro">自我介绍：</string>
+	<string name="content_service_content">服务内容：</string>
 
 	//注册信息
 	<string name="title_register">注册页面</string>
